[gd_scene load_steps=4 format=3 uid="uid://cwgjxcyy812jj"]

[ext_resource type="Script" path="res://leg.gd" id="1_wim6m"]
[ext_resource type="PackedScene" uid="uid://biquj5747frdg" path="res://leg_segment.tscn" id="1_xjxfj"]

[sub_resource type="Curve" id="Curve_7pm4l"]
_data = [Vector2(0, 0), 0.0, 0.965331, 0, 0, Vector2(0.897858, 0.29814), 0.0, 0.0, 0, 0, Vector2(1, 0), -7.22192, 0.0, 0, 0]
point_count = 3

[node name="Leg" type="Node3D" node_paths=PackedStringArray("rota_second_order", "extension_second_order")]
script = ExtResource("1_wim6m")
segment_1_length = 2.0
segment_2_length = 2.0
rest_distance = 2.0
returning_trajectory = SubResource("Curve_7pm4l")
incidence_angle = 1.57
extension_speed = 2.0
rota_second_order_config = {
"k": 1,
"wo": 40,
"xi": 1,
"z": 0
}
rota_second_order = NodePath("")
extension_second_order_config = {
"k": 1.0,
"wo": 40.0,
"xi": 1.0,
"z": 0.0
}
extension_second_order = NodePath("")
target_pos_marker_color = Color(1, 1, 0, 1)

[node name="Base" parent="." instance=ExtResource("1_xjxfj")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.25, 0, 0)

[node name="Segment_1" parent="Base" instance=ExtResource("1_xjxfj")]
transform = Transform3D(1, 0, 0, 0, 0.867459, 0.49751, 0, -0.49751, 0.867459, 0, 0, 0.25)

[node name="Segment_2" parent="Base/Segment_1" instance=ExtResource("1_xjxfj")]
transform = Transform3D(1, 0, 0, 0, 0.890699, -0.454593, 0, 0.454593, 0.890699, 0, 0, 2)

[node name="Segment_3" parent="Base/Segment_1/Segment_2" instance=ExtResource("1_xjxfj")]
transform = Transform3D(1, 0, 0, 0, -0.047995, -0.998848, 0, 0.998848, -0.047995, 0, 0, 2)

[node name="Editor_target" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.73333, 0.0926, 0)
gizmo_extents = 0.0
